--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ version = "0.1.3"
 authors = [
   { name="Carlos Mougan", email="carmougan@gmail.com" },
 ]
-description = "A small example package"
+description = "NoBias AI without Bias"
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
