--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,8 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-[project]
-name = "nobias"
-version = "0.1.5"
-authors = [
-  { name="Carlos Mougan", email="carmougan@gmail.com" },
-]
-description = "NoBias AI without Bias"
-readme = "README.md"
-license = { file="LICENSE" }
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
-[project.urls]
-"Homepage" = "https://github.com/nobias-project/nobias"
-"Bug Tracker" = "https://github.com/nobias-project/nobiasissues"
+[project]
+name = "lumache"
+authors = [{name = "Graziella", email = "graziella@lumache"}]
+dynamic = ["version", "description"]
