--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,9 +11,8 @@ sphinx:
 formats:
   - pdf
   - epub
+  
+# Optionally declare the Python requirements required to build your docs
 python:
-  # Install our python package before building the docs
-  install:
-    - method: pip
-    - requirements: docs/requirements.txt
-      path: .
+   install:
+   - requirements: docs/requirements.txt
