--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,22 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
-dynamic = ["version", "description"]
+name = "nobias"
+version = "0.0.2"
+authors = [
+  { name="Carlos Mougan", email="carmougan@gmail.com" },
+]
+description = "A small example package"
+readme = "README.md"
+license = { file="LICENSE" }
+requires-python = ">=3.7"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/nobias-project/nobias"
+"Bug Tracker" = "https://github.com/nobias-project/nobiasissues"
